# BasicOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt  algorithms.c  algorithms.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt  main.c
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/string/tasks/: allTaskTests.h  appendLineWithFewerWords.h  countWordsPalindromes.h  digitToStartForTheEntireString.h  digitsAtTheBeginningWithChangeLettersAtTheEnd.h  eachDigitWithItsCorrespondingNumberGaps.h  getLastWordFirstStringInSecond.h  haveSameWords.h  haveWordsMadeUpSameLetters.h  printWordsInReverseOrder.h  removeExtraSpaces.h  removeNonLetters.h  removeRepetitionsLastWordString.h  replace.h  reverseWordOrderOfAString.h  stringMerging.h  wordBeforeFirstWordWithA.h  wordsAreOrderedLexicographically.h
libs/data_structures/unordered_array/: unordered_array_set.c  unordered_array_set.h
